compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/i128_neg.fe
contract Foo:
    pub def bar() -> i128:
        return i128(-170141183460469231731687303715884105729)